force-app/main/default/objects/FinServ__Record_Rollup_Configuration__c/fields/FinServ__Active__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to apply the settings to this object&#39;s records.</description>
    <label>Settings Active</label>
    <type>Checkbox</type>
</CustomField>