force-app/main/default/objects/FinServ__Record_Rollup_Configuration__c/fields/FinServ__Update_Records_Silently__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Update_Records_Silently__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use silent updates when updating records with household id. Silent update does not update Last Modified By and Last Modified Date fields in the record.</description>
    <label>Update Records Silently</label>
    <type>Checkbox</type>
</CustomField>